Add create todo feature

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
 
 
 </body>
+
+<script src="./components/addForm/index.js"></script>
 <script src="./components/todoItem/index.js"></script>
 <script src="./components/todoList/index.js"></script>
+
 
 </html>
