Complete add feature

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Yet Another Todo</h1>
+    <h1 class="title">Yet Another Todo</h1>
     <div class="container">
         <todo-list></todo-list>
     </div>
