Setup lit-element

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do</title>
 
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"
     />
+    <!-- <script type="module" src="./index.js"></script> -->
   </head>
 
   <body>
@@ -21,7 +22,8 @@
     </div>
   </body>
 
-  <script type="module" src="./components/addForm/index.js"></script>
-  <script type="module" src="./components/todoItem/index.js"></script>
-  <script type="module" src="./components/todoList/index.js"></script>
+  
+  <script type="module" src="./src/components/addForm/index.js"></script>
+  <script type="module" src="./src/components/todoItem/index.js"></script>
+  <script type="module" src="./src/components/todoList/index.js"></script>
 </html>
